Set up Entity Framework Core with initial database context and configurations

--- a/Talabat.Host/appsettings.json
+++ b/Talabat.Host/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+        "Default": "Server=(local); Database=talabat; User Id=sa; Password=010045Abdo##@@; MultipleActiveResultSets=true; TrustServerCertificate=True"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
