--- a/Infrastructure/Persistence/Persistence.csproj
+++ b/Infrastructure/Persistence/Persistence.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\..\Core\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.14" />
+  </ItemGroup>
+
 </Project>
