--- a/Talabat.Host/Talabat.Host.csproj
+++ b/Talabat.Host/Talabat.Host.csproj
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.14" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../Core/Services/Services.csproj" />
+    <ProjectReference Include="../Infrastructure/Persistence/Persistence.csproj" />
+    <ProjectReference Include="../Infrastructure/Presentation/Presentation.csproj" />
   </ItemGroup>
 
 </Project>
