--- a/Talabat.Host/Talabat.Host.csproj
+++ b/Talabat.Host/Talabat.Host.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="../Infrastructure/Presentation/Presentation.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
+  </ItemGroup>
+
 </Project>
